Add auhtentification + vendor

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -1,3 +1,4 @@
 # English translations file.
 # Used primarily for translating authentication exception messages
 authentication_required: Authentication Required
+"Not privileged to request the resource.": "Authentication Required"
