Add tests + Refactor + error (WIP)
- Error : Failed to decode JSON body (Syntax error, malformed JSON):

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -2,3 +2,4 @@
 # Used primarily for translating authentication exception messages
 authentication_required: Authentication Required
 "Not privileged to request the resource.": "Authentication Required"
+"Invalid credentials.": "Invalid Credentials!"
